Second CRAN Rejection, title in 'Title Case'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,9 @@ import(shiny)
 import(shinyBS)
 import(shinydashboard)
 importFrom(httpuv,service)
+importFrom(methods,getPackageName)
 importFrom(shinyjs,disable)
 importFrom(shinyjs,enable)
 importFrom(tools,Rd_db)
-importFrom("utils", "capture.output", "installed.packages")
+importFrom(utils,capture.output)
+importFrom(utils,installed.packages)
