--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: spotGUI
 Type: Package
 Title: Graphical User Interface for the Package 'SPOT'
-Version: 0.1.0
+Version: 0.1.1
 Authors@R: c(
         person("Frederik","Rehbach", role = c("aut", "cre"), email = "frederik.rehbach@th-koeln.de"),
         person("Martin", "Zaefferer", role = "aut"),
@@ -33,7 +33,8 @@ Imports:
     rclipboard,
     plotly,
     tools,
-    httpuv
+    httpuv,
+    methods
 Suggests:
     roxygen2,
     testthat,
