Added smoof functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,10 @@ importFrom(httpuv,service)
 importFrom(methods,getPackageName)
 importFrom(shinyjs,disable)
 importFrom(shinyjs,enable)
+importFrom(smoof,filterFunctionsByTags)
+importFrom(smoof,getLowerBoxConstraints)
+importFrom(smoof,getUpperBoxConstraints)
+importFrom(smoof,makeFunctionsByName)
 importFrom(tools,Rd_db)
 importFrom(utils,capture.output)
 importFrom(utils,installed.packages)
