--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,10 +20,10 @@ License: GPL (>=2)
 Encoding: UTF-8
 LazyData: true
 Depends:
-    R (>= 3.1.0)
+    R (>= 3.1.0),
+    shinyBS
 Imports:
     smoof,
-    shinyBS,
     shiny,
     shinydashboard,
     SPOT (>= 2.0.3),
@@ -38,5 +38,6 @@ Imports:
     methods
 Suggests:
     testthat,
-    shinytest
+    shinytest,
+    devtools
 RoxygenNote: 6.0.1
