Add Import/Export V0.2.2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ import(rclipboard)
 import(rhandsontable)
 import(shiny)
 import(shinyBS)
+import(shinyFiles)
 import(shinydashboard)
 importFrom(httpuv,service)
 importFrom(methods,getPackageName)
