--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,7 +36,8 @@ Imports:
     tools,
     httpuv,
     methods,
-    shinyFiles
+    shinyFiles,
+    batchtools
 Suggests:
     testthat,
     shinytest,
